--- a/src/Components/Menu/menu.module.css
+++ b/src/Components/Menu/menu.module.css
@@ -2,6 +2,11 @@
     display: flex;
     position: absolute;
     float: bottom;
-    bottom: 0;
-    margin-left: 100px;
+    bottom: 20px;
+    margin-left: 150px;
+    width: 100px;
+}
+.Normalize {
+    text-decoration: none;
+    color: black;
 }
