--- a/src/Components/GenreCard/genre.card.module.css
+++ b/src/Components/GenreCard/genre.card.module.css
@@ -4,16 +4,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     margin: 10px auto;
 }
 .CardInfo {
     color: white;
     padding: 10px 15px;
-    background-color: #2b0d0d;
-    border-radius: 10%;
+    background-color: #505050;
     margin: 5px;
-    display: inline-block;
     cursor: pointer;
 
 }
