--- a/src/Components/Header/AvatarUser/avatar.module.css
+++ b/src/Components/Header/AvatarUser/avatar.module.css
@@ -1,4 +1,14 @@
 .Avatar {
-    width: 50px;
-    border-radius: 20px;
+    margin-right: 10px;
+    width: 45px;
+    border-radius: 50% ;
+    border: solid #0d4aac;
+}
+.UserName {
+    font-size: 20px;
+}
+.Flex {
+    display: flex;
+    align-items: center;
+
 }
