--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -1,5 +1,7 @@
 .Header {
-    height: 100vh;
+    display: flex;
+    width: 100%;
     position: fixed;
-    left: 0;
+    background-color: #ffffff;
+    border-bottom: #0d6efd solid 2px;
 }
