--- a/src/Components/Header/AvatarUser/avatar.module.css
+++ b/src/Components/Header/AvatarUser/avatar.module.css
@@ -2,7 +2,7 @@
     margin-right: 10px;
     width: 45px;
     border-radius: 50% ;
-    border: solid #0d4aac;
+    border: solid #424242;
 }
 .UserName {
     font-size: 20px;
