--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     position: fixed;
-    background-color: #ffffff;
+    background-color: #f0f0f0;
     border-bottom: #7d7d7d solid 2px;
     align-items: center;
 }
