--- a/src/Components/SearchForm/search.form.module.css
+++ b/src/Components/SearchForm/search.form.module.css
@@ -1,3 +1,8 @@
-/*.Bg {*/
-/*    background: #7b7b7b;*/
-/*}*/
+.White {
+
+}
+.Dark {
+    background: #969ea5;
+    /*border-radius: 4px;*/
+    border: solid 1px #c3c3c3;
+}
