--- a/src/Components/MovieListCard/movi.list.card.module.css
+++ b/src/Components/MovieListCard/movi.list.card.module.css
@@ -27,3 +27,11 @@
     box-shadow: 0px  0px 5px 3px #818181;
     width:  101%;
 }
+
+.Dark {
+background-color: #969ea5;
+    color: #212f39;
+}
+.White {
+    background-color: #dbdee6;
+}
