--- a/src/Components/GenreCard/genre.card.module.css
+++ b/src/Components/GenreCard/genre.card.module.css
@@ -1,5 +1,11 @@
 
-.Button {
+.Dark {
     margin: 2px;
-    background-color: white;
+    background: #969ea5;
+    border: solid 1px #353c43;
+    color: #27353f;
+}
+.White {
+    margin: 2px;
+    background-color: #dbdee6;
 }
