--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -8,7 +8,7 @@
 .Dark  {
     color: #cdcdcd;
     background-color: #27353f;
-    border-bottom: #c8c8c8 solid 2px;
+    border-bottom: #4c0b0b solid 2px;
 }
 .White {
     background-color: #dbdee6;
